--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,11 @@ instagram_username: albertopastormr
 l_cs-degree: https://informatica.ucm.es/estudios/grado-ingenieriadelsoftware
 l_jekyll: https://jekyllrb.com/
 # Social networks links
-l_my-email: mailto:BinaryByte@gmail.com
+l_my-email: mailto:BinaryByte.DEV@gmail.com
 l_my-twitter: https://twitter.com/Reshiram110
 l_my-gplus: https://plus.google.com/u/0/103154106735689134313
 l_my-github: https://github.com/Reshiram110
-l_my-instagram: https://instagram.com/albertopastormr
-l_my-linkedin: https://www.linkedin.com/in/albertopastormr/
+
  #class="ref-link" a utilizar para projects
 
 # Github repos links
